--- a/package.json
+++ b/package.json
@@ -17,6 +17,6 @@
   "author": "Naman Malhotra",
   "license": "ISC",
   "devDependencies": {
-    "microbundle": "0.12.3"
+    "microbundle": "^0.12.3"
   }
 }
